# mapping_agent

./: .env  .gitignore  app.py  pyproject.toml  readme.md  requirements.txt  setup.py
agents/: __init__.py  category_identification_agent.py  column_mapping_agent.py
config/: model_config.py  prompt_config.json  standard_columns_config.json
views/: streamlit_views.py
