[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfn-mapping-agent"
version = "0.1.0"
authors = [
  { name="StepFN AI" },
]
description = "A mapping agent for data column categorization and mapping"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "pandas",
    "streamlit",
    "python-dotenv",
    "sfn-blueprint"
]

[project.urls]
Homepage = "https://github.com/stepfnAI/mapping_agent" 